apps/base/adguard/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguard
  template:
    metadata:
      labels:
        app: adguard
        app.kubernetes.io/name: adguard
    spec:
      containers:
        - name: adguard
          image: "adguard/adguardhome:v0.107.78"
          ports:
            - containerPort: 80
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 10
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 10
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "125m"
              memory: "128Mi"
          volumeMounts:
            - mountPath: /opt/adguardhome/work
              name: adguard-work
            - mountPath: /opt/adguardhome/conf
              name: adguard-conf
      volumes:
        - name: adguard-work
          persistentVolumeClaim:
            claimName: adguard-work
        - name: adguard-conf
          persistentVolumeClaim:
            claimName: adguard-conf
